{
    "name": "MotorActionMap",
    "maps": [
        {
            "name": "Mouse",
            "id": "31374f73-1d79-46ab-bf83-1fe126c7e95d",
            "actions": [
                {
                    "name": "ClickLeft",
                    "type": "PassThrough",
                    "id": "6a5f52ad-7012-4976-bb9f-adf9f8bd1d64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePos",
                    "type": "PassThrough",
                    "id": "a32091fe-6698-4ac2-85ae-d7168713837e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "674e9736-126c-4784-bf13-08fdd5379f55",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ClickLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "365557dc-9716-4c48-92d4-cf2ba37826f1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}